assignment7/parser.output
Terminals unused in grammar

    CHSIGN
    SIZEOF
    END


State 1 conflicts: 2 shift/reduce
State 20 conflicts: 1 shift/reduce
State 67 conflicts: 2 reduce/reduce
State 179 conflicts: 2 shift/reduce
State 187 conflicts: 1 shift/reduce
State 213 conflicts: 2 shift/reduce


Grammar

    0 $accept: program $end

    1 program: decl_list

    2 decl_list: decl_list decl
    3          | decl

    4 decl: var_decl
    5     | func_decl
    6     | error

    7 var_decl: type_spec var_decl_list SEMI
    8         | error var_decl_list SEMI
    9         | type_spec error SEMI

   10 scoped_var_decl: STATIC type_spec var_decl_list SEMI
   11                | type_spec var_decl_list SEMI

   12 var_decl_list: var_decl_list COMMA var_decl_init
   13              | var_decl_init
   14              | var_decl_list COMMA error
   15              | error

   16 var_decl_init: var_decl_id COLON simple_exp
   17              | error ':' simple_exp
   18              | var_decl_id

   19 var_decl_id: ID
   20            | ID LBRACKET NUMBERCONST RBRACKET
   21            | ID LBRACKET error
   22            | error RBRACKET

   23 type_spec: BOOL
   24          | CHAR
   25          | INT

   26 func_decl: type_spec ID LPAREN params RPAREN compound_stmt
   27          | ID LPAREN params RPAREN compound_stmt
   28          | type_spec error
   29          | type_spec ID LPAREN error
   30          | ID LPAREN error
   31          | ID LPAREN params RPAREN error

   32 params: param_list
   33       | ε

   34 param_list: param_list SEMI param_type_list
   35           | param_type_list
   36           | param_list SEMI error
   37           | error

   38 param_type_list: type_spec param_id_list
   39                | type_spec error

   40 param_id_list: param_id_list COMMA param_id
   41              | param_id
   42              | param_id_list COMMA error
   43              | error

   44 param_id: ID LBRACKET RBRACKET
   45         | ID

   46 stmt: matched_stmt
   47     | unmatched_stmt

   48 matched_stmt: matched_iter_stmt
   49             | matched_select_stmt
   50             | compound_stmt
   51             | exp_stmt
   52             | return_stmt
   53             | break_stmt

   54 unmatched_stmt: unmatched_iter_stmt
   55               | unmatched_select_stmt

   56 matched_select_stmt: IF simple_exp THEN matched_stmt ELSE matched_stmt
   57                    | IF error
   58                    | IF error ELSE matched_stmt
   59                    | IF error THEN matched_stmt ELSE matched_stmt

   60 unmatched_select_stmt: IF simple_exp THEN stmt
   61                      | IF simple_exp THEN matched_stmt ELSE unmatched_stmt

   62 exp_stmt: exp SEMI
   63         | SEMI
   64         | error SEMI

   65 compound_stmt: LBRACE local_decls stmt_list RBRACE

   66 local_decls: local_decls scoped_var_decl
   67            | ε

   68 stmt_list: stmt_list stmt
   69          | ε

   70 matched_iter_stmt: WHILE simple_exp DO matched_stmt
   71                  | FOR ID ASGN iter_range DO matched_stmt
   72                  | WHILE error DO matched_stmt
   73                  | WHILE error
   74                  | FOR ID ASGN error DO matched_stmt
   75                  | FOR error

   76 unmatched_iter_stmt: WHILE simple_exp DO unmatched_stmt
   77                    | FOR ID ASGN iter_range DO unmatched_stmt
   78                    | IF error THEN unmatched_stmt
   79                    | IF error THEN matched_stmt ELSE unmatched_stmt

   80 iter_range: simple_exp TO simple_exp
   81           | simple_exp TO simple_exp BY simple_exp
   82           | simple_exp TO error
   83           | error BY error
   84           | simple_exp TO simple_exp BY error

   85 return_stmt: RETURN SEMI
   86            | RETURN exp SEMI
   87            | RETURN error SEMI

   88 break_stmt: BREAK SEMI

   89 exp: mutable assign_op exp
   90    | mutable INC
   91    | mutable DEC
   92    | simple_exp
   93    | error assign_op exp
   94    | mutable assign_op error
   95    | error DEC
   96    | error INC

   97 assign_op: ASGN
   98          | ADDASS
   99          | SUBASS
  100          | MULASS
  101          | DIVASS

  102 simple_exp: simple_exp OR and_exp
  103           | and_exp
  104           | simple_exp OR error

  105 and_exp: and_exp AND unary_rel_exp
  106        | unary_rel_exp
  107        | and_exp AND error

  108 unary_rel_exp: NOT unary_rel_exp
  109              | rel_exp
  110              | NOT error

  111 rel_exp: sum_exp rel_op sum_exp
  112        | sum_exp

  113 rel_op: LT
  114       | LEQ
  115       | GT
  116       | GEQ
  117       | EQ
  118       | NEQ

  119 sum_exp: sum_exp sum_op mul_exp
  120        | mul_exp
  121        | sum_exp sum_op error

  122 sum_op: PLUS
  123       | MINUS

  124 mul_exp: mul_exp mul_op unary_exp
  125        | unary_exp
  126        | mul_exp mul_op error

  127 mul_op: TIMES
  128       | DIV
  129       | MOD

  130 unary_exp: unary_op unary_exp
  131          | factor
  132          | unary_op error

  133 unary_op: MINUS
  134         | TIMES
  135         | TERNARY

  136 factor: mutable
  137       | immutable

  138 mutable: ID LBRACKET exp RBRACKET
  139        | ID

  140 immutable: LPAREN exp RPAREN
  141          | call
  142          | constant
  143          | LPAREN error

  144 call: ID LPAREN args RPAREN
  145     | error LPAREN

  146 args: arg_list
  147     | ε

  148 arg_list: arg_list COMMA exp
  149         | exp
  150         | arg_list COMMA error

  151 constant: NUMBERCONST
  152         | CHARCONST
  153         | STRINGCONST
  154         | TRUE
  155         | FALSE


Terminals, with rules where they appear

    $end (0) 0
    ':' (58) 17
    error (256) 6 8 9 14 15 17 21 22 28 29 30 31 36 37 39 42 43 57 58 59 64 72 73 74 75 78 79 82 83 84 87 93 94 95 96 104 107 110 121 126 132 143 145 150
    ID <token_data> (258) 19 20 21 26 27 29 30 31 44 45 71 74 77 138 139 144
    NUMBERCONST <token_data> (259) 20 151
    CHARCONST <token_data> (260) 152
    STRINGCONST <token_data> (261) 153
    BOOL <token_data> (262) 23
    INT <token_data> (263) 25
    CHAR <token_data> (264) 24
    TRUE <token_data> (265) 154
    FALSE <token_data> (266) 155
    STATIC <token_data> (267) 10
    IF <token_data> (268) 56 57 58 59 60 61 78 79
    ELSE <token_data> (269) 56 58 59 61 79
    THEN <token_data> (270) 56 59 60 61 78 79
    RETURN <token_data> (271) 85 86 87
    BREAK <token_data> (272) 88
    TO <token_data> (273) 80 81 82 84
    BY <token_data> (274) 81 83 84
    DO <token_data> (275) 70 71 72 74 76 77
    FOR <token_data> (276) 71 74 75 77
    WHILE <token_data> (277) 70 72 73 76
    ASGN <token_data> (278) 71 74 77 97
    ADDASS <token_data> (279) 98
    SUBASS <token_data> (280) 99
    MULASS <token_data> (281) 100
    DIVASS <token_data> (282) 101
    INC <token_data> (283) 90 96
    DEC <token_data> (284) 91 95
    OR <token_data> (285) 102 104
    AND <token_data> (286) 105 107
    NOT <token_data> (287) 108 110
    LT <token_data> (288) 113
    LEQ <token_data> (289) 114
    GT <token_data> (290) 115
    GEQ <token_data> (291) 116
    EQ <token_data> (292) 117
    NEQ <token_data> (293) 118
    PLUS <token_data> (294) 122
    MINUS <token_data> (295) 123 133
    TIMES <token_data> (296) 127 134
    DIV <token_data> (297) 128
    MOD <token_data> (298) 129
    TERNARY <token_data> (299) 135
    CHSIGN <token_data> (300)
    SIZEOF <token_data> (301)
    LPAREN <token_data> (302) 26 27 29 30 31 140 143 144 145
    RPAREN <token_data> (303) 26 27 31 140 144
    LBRACE <token_data> (304) 65
    RBRACE <token_data> (305) 65
    LBRACKET <token_data> (306) 20 21 44 138
    RBRACKET <token_data> (307) 20 22 44 138
    COMMA <token_data> (308) 12 14 40 42 148 150
    COLON <token_data> (309) 16
    SEMI <token_data> (310) 7 8 9 10 11 34 36 62 63 64 85 86 87 88
    END <token_data> (311)


Nonterminals, with rules where they appear

    $accept (58)
        on left: 0
    program <tree_node> (59)
        on left: 1
        on right: 0
    decl_list <tree_node> (60)
        on left: 2 3
        on right: 1 2
    decl <tree_node> (61)
        on left: 4 5 6
        on right: 2 3
    var_decl <tree_node> (62)
        on left: 7 8 9
        on right: 4
    scoped_var_decl <tree_node> (63)
        on left: 10 11
        on right: 66
    var_decl_list <tree_node> (64)
        on left: 12 13 14 15
        on right: 7 8 10 11 12 14
    var_decl_init <tree_node> (65)
        on left: 16 17 18
        on right: 12 13
    var_decl_id <tree_node> (66)
        on left: 19 20 21 22
        on right: 16 18
    type_spec <type> (67)
        on left: 23 24 25
        on right: 7 9 10 11 26 28 29 38 39
    func_decl <tree_node> (68)
        on left: 26 27 28 29 30 31
        on right: 5
    params <tree_node> (69)
        on left: 32 33
        on right: 26 27 31
    param_list <tree_node> (70)
        on left: 34 35 36 37
        on right: 32 34 36
    param_type_list <tree_node> (71)
        on left: 38 39
        on right: 34 35
    param_id_list <tree_node> (72)
        on left: 40 41 42 43
        on right: 38 40 42
    param_id <tree_node> (73)
        on left: 44 45
        on right: 40 41
    stmt <tree_node> (74)
        on left: 46 47
        on right: 60 68
    matched_stmt <tree_node> (75)
        on left: 48 49 50 51 52 53
        on right: 46 56 58 59 61 70 71 72 74 79
    unmatched_stmt <tree_node> (76)
        on left: 54 55
        on right: 47 61 76 77 78 79
    matched_select_stmt <tree_node> (77)
        on left: 56 57 58 59
        on right: 49
    unmatched_select_stmt <tree_node> (78)
        on left: 60 61
        on right: 55
    exp_stmt <tree_node> (79)
        on left: 62 63 64
        on right: 51
    compound_stmt <tree_node> (80)
        on left: 65
        on right: 26 27 50
    local_decls <tree_node> (81)
        on left: 66 67
        on right: 65 66
    stmt_list <tree_node> (82)
        on left: 68 69
        on right: 65 68
    matched_iter_stmt <tree_node> (83)
        on left: 70 71 72 73 74 75
        on right: 48
    unmatched_iter_stmt <tree_node> (84)
        on left: 76 77 78 79
        on right: 54
    iter_range <tree_node> (85)
        on left: 80 81 82 83 84
        on right: 71 77
    return_stmt <tree_node> (86)
        on left: 85 86 87
        on right: 52
    break_stmt <tree_node> (87)
        on left: 88
        on right: 53
    exp <tree_node> (88)
        on left: 89 90 91 92 93 94 95 96
        on right: 62 86 89 93 138 140 148 149
    assign_op <op> (89)
        on left: 97 98 99 100 101
        on right: 89 93 94
    simple_exp <tree_node> (90)
        on left: 102 103 104
        on right: 16 17 56 60 61 70 76 80 81 82 84 92 102 104
    and_exp <tree_node> (91)
        on left: 105 106 107
        on right: 102 103 105 107
    unary_rel_exp <tree_node> (92)
        on left: 108 109 110
        on right: 105 106 108
    rel_exp <tree_node> (93)
        on left: 111 112
        on right: 109
    rel_op <op> (94)
        on left: 113 114 115 116 117 118
        on right: 111
    sum_exp <tree_node> (95)
        on left: 119 120 121
        on right: 111 112 119 121
    sum_op <op> (96)
        on left: 122 123
        on right: 119 121
    mul_exp <tree_node> (97)
        on left: 124 125 126
        on right: 119 120 124 126
    mul_op <op> (98)
        on left: 127 128 129
        on right: 124 126
    unary_exp <tree_node> (99)
        on left: 130 131 132
        on right: 124 125 130
    unary_op <op> (100)
        on left: 133 134 135
        on right: 130 132
    factor <tree_node> (101)
        on left: 136 137
        on right: 131
    mutable <tree_node> (102)
        on left: 138 139
        on right: 89 90 91 94 136
    immutable <tree_node> (103)
        on left: 140 141 142 143
        on right: 137
    call <tree_node> (104)
        on left: 144 145
        on right: 141
    args <tree_node> (105)
        on left: 146 147
        on right: 144
    arg_list <tree_node> (106)
        on left: 148 149 150
        on right: 146 148 150
    constant <tree_node> (107)
        on left: 151 152 153 154 155
        on right: 142


State 0

    0 $accept: • program $end

    error  shift, and go to state 1
    ID     shift, and go to state 2
    BOOL   shift, and go to state 3
    INT    shift, and go to state 4
    CHAR   shift, and go to state 5

    program    go to state 6
    decl_list  go to state 7
    decl       go to state 8
    var_decl   go to state 9
    type_spec  go to state 10
    func_decl  go to state 11


State 1

    6 decl: error •
    8 var_decl: error • var_decl_list SEMI

    error  shift, and go to state 12
    ID     shift, and go to state 13

    $end   reduce using rule 6 (decl)
    error  [reduce using rule 6 (decl)]
    ID     [reduce using rule 6 (decl)]
    BOOL   reduce using rule 6 (decl)
    INT    reduce using rule 6 (decl)
    CHAR   reduce using rule 6 (decl)

    var_decl_list  go to state 14
    var_decl_init  go to state 15
    var_decl_id    go to state 16


State 2

   27 func_decl: ID • LPAREN params RPAREN compound_stmt
   30          | ID • LPAREN error
   31          | ID • LPAREN params RPAREN error

    LPAREN  shift, and go to state 17


State 3

   23 type_spec: BOOL •

    $default  reduce using rule 23 (type_spec)


State 4

   25 type_spec: INT •

    $default  reduce using rule 25 (type_spec)


State 5

   24 type_spec: CHAR •

    $default  reduce using rule 24 (type_spec)


State 6

    0 $accept: program • $end

    $end  shift, and go to state 18


State 7

    1 program: decl_list •
    2 decl_list: decl_list • decl

    error  shift, and go to state 1
    ID     shift, and go to state 2
    BOOL   shift, and go to state 3
    INT    shift, and go to state 4
    CHAR   shift, and go to state 5

    $end  reduce using rule 1 (program)

    decl       go to state 19
    var_decl   go to state 9
    type_spec  go to state 10
    func_decl  go to state 11


State 8

    3 decl_list: decl •

    $default  reduce using rule 3 (decl_list)


State 9

    4 decl: var_decl •

    $default  reduce using rule 4 (decl)


State 10

    7 var_decl: type_spec • var_decl_list SEMI
    9         | type_spec • error SEMI
   26 func_decl: type_spec • ID LPAREN params RPAREN compound_stmt
   28          | type_spec • error
   29          | type_spec • ID LPAREN error

    error  shift, and go to state 20
    ID     shift, and go to state 21

    var_decl_list  go to state 22
    var_decl_init  go to state 15
    var_decl_id    go to state 16


State 11

    5 decl: func_decl •

    $default  reduce using rule 5 (decl)


State 12

   15 var_decl_list: error •
   17 var_decl_init: error • ':' simple_exp
   22 var_decl_id: error • RBRACKET

    RBRACKET  shift, and go to state 23
    ':'       shift, and go to state 24

    $default  reduce using rule 15 (var_decl_list)


State 13

   19 var_decl_id: ID •
   20            | ID • LBRACKET NUMBERCONST RBRACKET
   21            | ID • LBRACKET error

    LBRACKET  shift, and go to state 25

    $default  reduce using rule 19 (var_decl_id)


State 14

    8 var_decl: error var_decl_list • SEMI
   12 var_decl_list: var_decl_list • COMMA var_decl_init
   14              | var_decl_list • COMMA error

    COMMA  shift, and go to state 26
    SEMI   shift, and go to state 27


State 15

   13 var_decl_list: var_decl_init •

    $default  reduce using rule 13 (var_decl_list)


State 16

   16 var_decl_init: var_decl_id • COLON simple_exp
   18              | var_decl_id •

    COLON  shift, and go to state 28

    $default  reduce using rule 18 (var_decl_init)


State 17

   27 func_decl: ID LPAREN • params RPAREN compound_stmt
   30          | ID LPAREN • error
   31          | ID LPAREN • params RPAREN error

    error  shift, and go to state 29
    BOOL   shift, and go to state 3
    INT    shift, and go to state 4
    CHAR   shift, and go to state 5

    RPAREN  reduce using rule 33 (params)

    type_spec        go to state 30
    params           go to state 31
    param_list       go to state 32
    param_type_list  go to state 33


State 18

    0 $accept: program $end •

    $default  accept


State 19

    2 decl_list: decl_list decl •

    $default  reduce using rule 2 (decl_list)


State 20

    9 var_decl: type_spec error • SEMI
   15 var_decl_list: error •
   17 var_decl_init: error • ':' simple_exp
   22 var_decl_id: error • RBRACKET
   28 func_decl: type_spec error •

    RBRACKET  shift, and go to state 23
    SEMI      shift, and go to state 34
    ':'       shift, and go to state 24

    COMMA     reduce using rule 15 (var_decl_list)
    SEMI      [reduce using rule 15 (var_decl_list)]
    $default  reduce using rule 28 (func_decl)


State 21

   19 var_decl_id: ID •
   20            | ID • LBRACKET NUMBERCONST RBRACKET
   21            | ID • LBRACKET error
   26 func_decl: type_spec ID • LPAREN params RPAREN compound_stmt
   29          | type_spec ID • LPAREN error

    LPAREN    shift, and go to state 35
    LBRACKET  shift, and go to state 25

    $default  reduce using rule 19 (var_decl_id)


State 22

    7 var_decl: type_spec var_decl_list • SEMI
   12 var_decl_list: var_decl_list • COMMA var_decl_init
   14              | var_decl_list • COMMA error

    COMMA  shift, and go to state 26
    SEMI   shift, and go to state 36


State 23

   22 var_decl_id: error RBRACKET •

    $default  reduce using rule 22 (var_decl_id)


State 24

   17 var_decl_init: error ':' • simple_exp

    error        shift, and go to state 37
    ID           shift, and go to state 38
    NUMBERCONST  shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    TRUE         shift, and go to state 42
    FALSE        shift, and go to state 43
    NOT          shift, and go to state 44
    MINUS        shift, and go to state 45
    TIMES        shift, and go to state 46
    TERNARY      shift, and go to state 47
    LPAREN       shift, and go to state 48

    simple_exp     go to state 49
    and_exp        go to state 50
    unary_rel_exp  go to state 51
    rel_exp        go to state 52
    sum_exp        go to state 53
    mul_exp        go to state 54
    unary_exp      go to state 55
    unary_op       go to state 56
    factor         go to state 57
    mutable        go to state 58
    immutable      go to state 59
    call           go to state 60
    constant       go to state 61


State 25

   20 var_decl_id: ID LBRACKET • NUMBERCONST RBRACKET
   21            | ID LBRACKET • error

    error        shift, and go to state 62
    NUMBERCONST  shift, and go to state 63


State 26

   12 var_decl_list: var_decl_list COMMA • var_decl_init
   14              | var_decl_list COMMA • error

    error  shift, and go to state 64
    ID     shift, and go to state 13

    var_decl_init  go to state 65
    var_decl_id    go to state 16


State 27

    8 var_decl: error var_decl_list SEMI •

    $default  reduce using rule 8 (var_decl)


State 28

   16 var_decl_init: var_decl_id COLON • simple_exp

    error        shift, and go to state 37
    ID           shift, and go to state 38
    NUMBERCONST  shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    TRUE         shift, and go to state 42
    FALSE        shift, and go to state 43
    NOT          shift, and go to state 44
    MINUS        shift, and go to state 45
    TIMES        shift, and go to state 46
    TERNARY      shift, and go to state 47
    LPAREN       shift, and go to state 48

    simple_exp     go to state 66
    and_exp        go to state 50
    unary_rel_exp  go to state 51
    rel_exp        go to state 52
    sum_exp        go to state 53
    mul_exp        go to state 54
    unary_exp      go to state 55
    unary_op       go to state 56
    factor         go to state 57
    mutable        go to state 58
    immutable      go to state 59
    call           go to state 60
    constant       go to state 61


State 29

   30 func_decl: ID LPAREN error •
   37 param_list: error •

    RPAREN    reduce using rule 37 (param_list)
    SEMI      reduce using rule 37 (param_list)
    $default  reduce using rule 30 (func_decl)


State 30

   38 param_type_list: type_spec • param_id_list
   39                | type_spec • error

    error  shift, and go to state 67
    ID     shift, and go to state 68

    param_id_list  go to state 69
    param_id       go to state 70


State 31

   27 func_decl: ID LPAREN params • RPAREN compound_stmt
   31          | ID LPAREN params • RPAREN error

    RPAREN  shift, and go to state 71


State 32

   32 params: param_list •
   34 param_list: param_list • SEMI param_type_list
   36           | param_list • SEMI error

    SEMI  shift, and go to state 72

    $default  reduce using rule 32 (params)


State 33

   35 param_list: param_type_list •

    $default  reduce using rule 35 (param_list)


State 34

    9 var_decl: type_spec error SEMI •

    $default  reduce using rule 9 (var_decl)


State 35

   26 func_decl: type_spec ID LPAREN • params RPAREN compound_stmt
   29          | type_spec ID LPAREN • error

    error  shift, and go to state 73
    BOOL   shift, and go to state 3
    INT    shift, and go to state 4
    CHAR   shift, and go to state 5

    RPAREN  reduce using rule 33 (params)

    type_spec        go to state 30
    params           go to state 74
    param_list       go to state 32
    param_type_list  go to state 33


State 36

    7 var_decl: type_spec var_decl_list SEMI •

    $default  reduce using rule 7 (var_decl)


State 37

  145 call: error • LPAREN

    LPAREN  shift, and go to state 75


State 38

  138 mutable: ID • LBRACKET exp RBRACKET
  139        | ID •
  144 call: ID • LPAREN args RPAREN

    LPAREN    shift, and go to state 76
    LBRACKET  shift, and go to state 77

    $default  reduce using rule 139 (mutable)


State 39

  151 constant: NUMBERCONST •

    $default  reduce using rule 151 (constant)


State 40

  152 constant: CHARCONST •

    $default  reduce using rule 152 (constant)


State 41

  153 constant: STRINGCONST •

    $default  reduce using rule 153 (constant)


State 42

  154 constant: TRUE •

    $default  reduce using rule 154 (constant)


State 43

  155 constant: FALSE •

    $default  reduce using rule 155 (constant)


State 44

  108 unary_rel_exp: NOT • unary_rel_exp
  110              | NOT • error

    error        shift, and go to state 78
    ID           shift, and go to state 38
    NUMBERCONST  shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    TRUE         shift, and go to state 42
    FALSE        shift, and go to state 43
    NOT          shift, and go to state 44
    MINUS        shift, and go to state 45
    TIMES        shift, and go to state 46
    TERNARY      shift, and go to state 47
    LPAREN       shift, and go to state 48

    unary_rel_exp  go to state 79
    rel_exp        go to state 52
    sum_exp        go to state 53
    mul_exp        go to state 54
    unary_exp      go to state 55
    unary_op       go to state 56
    factor         go to state 57
    mutable        go to state 58
    immutable      go to state 59
    call           go to state 60
    constant       go to state 61


State 45

  133 unary_op: MINUS •

    $default  reduce using rule 133 (unary_op)


State 46

  134 unary_op: TIMES •

    $default  reduce using rule 134 (unary_op)


State 47

  135 unary_op: TERNARY •

    $default  reduce using rule 135 (unary_op)


State 48

  140 immutable: LPAREN • exp RPAREN
  143          | LPAREN • error

    error        shift, and go to state 80
    ID           shift, and go to state 38
    NUMBERCONST  shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    TRUE         shift, and go to state 42
    FALSE        shift, and go to state 43
    NOT          shift, and go to state 44
    MINUS        shift, and go to state 45
    TIMES        shift, and go to state 46
    TERNARY      shift, and go to state 47
    LPAREN       shift, and go to state 48

    exp            go to state 81
    simple_exp     go to state 82
    and_exp        go to state 50
    unary_rel_exp  go to state 51
    rel_exp        go to state 52
    sum_exp        go to state 53
    mul_exp        go to state 54
    unary_exp      go to state 55
    unary_op       go to state 56
    factor         go to state 57
    mutable        go to state 83
    immutable      go to state 59
    call           go to state 60
    constant       go to state 61


State 49

   17 var_decl_init: error ':' simple_exp •
  102 simple_exp: simple_exp • OR and_exp
  104           | simple_exp • OR error

    OR  shift, and go to state 84

    $default  reduce using rule 17 (var_decl_init)


State 50

  103 simple_exp: and_exp •
  105 and_exp: and_exp • AND unary_rel_exp
  107        | and_exp • AND error

    AND  shift, and go to state 85

    $default  reduce using rule 103 (simple_exp)


State 51

  106 and_exp: unary_rel_exp •

    $default  reduce using rule 106 (and_exp)


State 52

  109 unary_rel_exp: rel_exp •

    $default  reduce using rule 109 (unary_rel_exp)


State 53

  111 rel_exp: sum_exp • rel_op sum_exp
  112        | sum_exp •
  119 sum_exp: sum_exp • sum_op mul_exp
  121        | sum_exp • sum_op error

    LT     shift, and go to state 86
    LEQ    shift, and go to state 87
    GT     shift, and go to state 88
    GEQ    shift, and go to state 89
    EQ     shift, and go to state 90
    NEQ    shift, and go to state 91
    PLUS   shift, and go to state 92
    MINUS  shift, and go to state 93

    $default  reduce using rule 112 (rel_exp)

    rel_op  go to state 94
    sum_op  go to state 95


State 54

  120 sum_exp: mul_exp •
  124 mul_exp: mul_exp • mul_op unary_exp
  126        | mul_exp • mul_op error

    TIMES  shift, and go to state 96
    DIV    shift, and go to state 97
    MOD    shift, and go to state 98

    $default  reduce using rule 120 (sum_exp)

    mul_op  go to state 99


State 55

  125 mul_exp: unary_exp •

    $default  reduce using rule 125 (mul_exp)


State 56

  130 unary_exp: unary_op • unary_exp
  132          | unary_op • error

    error        shift, and go to state 100
    ID           shift, and go to state 38
    NUMBERCONST  shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    TRUE         shift, and go to state 42
    FALSE        shift, and go to state 43
    MINUS        shift, and go to state 45
    TIMES        shift, and go to state 46
    TERNARY      shift, and go to state 47
    LPAREN       shift, and go to state 48

    unary_exp  go to state 101
    unary_op   go to state 56
    factor     go to state 57
    mutable    go to state 58
    immutable  go to state 59
    call       go to state 60
    constant   go to state 61


State 57

  131 unary_exp: factor •

    $default  reduce using rule 131 (unary_exp)


State 58

  136 factor: mutable •

    $default  reduce using rule 136 (factor)


State 59

  137 factor: immutable •

    $default  reduce using rule 137 (factor)


State 60

  141 immutable: call •

    $default  reduce using rule 141 (immutable)


State 61

  142 immutable: constant •

    $default  reduce using rule 142 (immutable)


State 62

   21 var_decl_id: ID LBRACKET error •

    $default  reduce using rule 21 (var_decl_id)


State 63

   20 var_decl_id: ID LBRACKET NUMBERCONST • RBRACKET

    RBRACKET  shift, and go to state 102


State 64

   14 var_decl_list: var_decl_list COMMA error •
   17 var_decl_init: error • ':' simple_exp
   22 var_decl_id: error • RBRACKET

    RBRACKET  shift, and go to state 23
    ':'       shift, and go to state 24

    $default  reduce using rule 14 (var_decl_list)


State 65

   12 var_decl_list: var_decl_list COMMA var_decl_init •

    $default  reduce using rule 12 (var_decl_list)


State 66

   16 var_decl_init: var_decl_id COLON simple_exp •
  102 simple_exp: simple_exp • OR and_exp
  104           | simple_exp • OR error

    OR  shift, and go to state 84

    $default  reduce using rule 16 (var_decl_init)


State 67

   39 param_type_list: type_spec error •
   43 param_id_list: error •

    RPAREN    reduce using rule 39 (param_type_list)
    RPAREN    [reduce using rule 43 (param_id_list)]
    COMMA     reduce using rule 43 (param_id_list)
    SEMI      reduce using rule 39 (param_type_list)
    SEMI      [reduce using rule 43 (param_id_list)]
    $default  reduce using rule 39 (param_type_list)


State 68

   44 param_id: ID • LBRACKET RBRACKET
   45         | ID •

    LBRACKET  shift, and go to state 103

    $default  reduce using rule 45 (param_id)


State 69

   38 param_type_list: type_spec param_id_list •
   40 param_id_list: param_id_list • COMMA param_id
   42              | param_id_list • COMMA error

    COMMA  shift, and go to state 104

    $default  reduce using rule 38 (param_type_list)


State 70

   41 param_id_list: param_id •

    $default  reduce using rule 41 (param_id_list)


State 71

   27 func_decl: ID LPAREN params RPAREN • compound_stmt
   31          | ID LPAREN params RPAREN • error

    error   shift, and go to state 105
    LBRACE  shift, and go to state 106

    compound_stmt  go to state 107


State 72

   34 param_list: param_list SEMI • param_type_list
   36           | param_list SEMI • error

    error  shift, and go to state 108
    BOOL   shift, and go to state 3
    INT    shift, and go to state 4
    CHAR   shift, and go to state 5

    type_spec        go to state 30
    param_type_list  go to state 109


State 73

   29 func_decl: type_spec ID LPAREN error •
   37 param_list: error •

    RPAREN    reduce using rule 37 (param_list)
    SEMI      reduce using rule 37 (param_list)
    $default  reduce using rule 29 (func_decl)


State 74

   26 func_decl: type_spec ID LPAREN params • RPAREN compound_stmt

    RPAREN  shift, and go to state 110


State 75

  145 call: error LPAREN •

    $default  reduce using rule 145 (call)


State 76

  144 call: ID LPAREN • args RPAREN

    error        shift, and go to state 111
    ID           shift, and go to state 38
    NUMBERCONST  shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    TRUE         shift, and go to state 42
    FALSE        shift, and go to state 43
    NOT          shift, and go to state 44
    MINUS        shift, and go to state 45
    TIMES        shift, and go to state 46
    TERNARY      shift, and go to state 47
    LPAREN       shift, and go to state 48

    RPAREN  reduce using rule 147 (args)

    exp            go to state 112
    simple_exp     go to state 82
    and_exp        go to state 50
    unary_rel_exp  go to state 51
    rel_exp        go to state 52
    sum_exp        go to state 53
    mul_exp        go to state 54
    unary_exp      go to state 55
    unary_op       go to state 56
    factor         go to state 57
    mutable        go to state 83
    immutable      go to state 59
    call           go to state 60
    args           go to state 113
    arg_list       go to state 114
    constant       go to state 61


State 77

  138 mutable: ID LBRACKET • exp RBRACKET

    error        shift, and go to state 111
    ID           shift, and go to state 38
    NUMBERCONST  shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    TRUE         shift, and go to state 42
    FALSE        shift, and go to state 43
    NOT          shift, and go to state 44
    MINUS        shift, and go to state 45
    TIMES        shift, and go to state 46
    TERNARY      shift, and go to state 47
    LPAREN       shift, and go to state 48

    exp            go to state 115
    simple_exp     go to state 82
    and_exp        go to state 50
    unary_rel_exp  go to state 51
    rel_exp        go to state 52
    sum_exp        go to state 53
    mul_exp        go to state 54
    unary_exp      go to state 55
    unary_op       go to state 56
    factor         go to state 57
    mutable        go to state 83
    immutable      go to state 59
    call           go to state 60
    constant       go to state 61


State 78

  110 unary_rel_exp: NOT error •
  145 call: error • LPAREN

    LPAREN  shift, and go to state 75

    $default  reduce using rule 110 (unary_rel_exp)


State 79

  108 unary_rel_exp: NOT unary_rel_exp •

    $default  reduce using rule 108 (unary_rel_exp)


State 80

   93 exp: error • assign_op exp
   95    | error • DEC
   96    | error • INC
  143 immutable: LPAREN error •
  145 call: error • LPAREN

    ASGN    shift, and go to state 116
    ADDASS  shift, and go to state 117
    SUBASS  shift, and go to state 118
    MULASS  shift, and go to state 119
    DIVASS  shift, and go to state 120
    INC     shift, and go to state 121
    DEC     shift, and go to state 122
    LPAREN  shift, and go to state 75

    $default  reduce using rule 143 (immutable)

    assign_op  go to state 123


State 81

  140 immutable: LPAREN exp • RPAREN

    RPAREN  shift, and go to state 124


State 82

   92 exp: simple_exp •
  102 simple_exp: simple_exp • OR and_exp
  104           | simple_exp • OR error

    OR  shift, and go to state 84

    $default  reduce using rule 92 (exp)


State 83

   89 exp: mutable • assign_op exp
   90    | mutable • INC
   91    | mutable • DEC
   94    | mutable • assign_op error
  136 factor: mutable •

    ASGN    shift, and go to state 116
    ADDASS  shift, and go to state 117
    SUBASS  shift, and go to state 118
    MULASS  shift, and go to state 119
    DIVASS  shift, and go to state 120
    INC     shift, and go to state 125
    DEC     shift, and go to state 126

    $default  reduce using rule 136 (factor)

    assign_op  go to state 127


State 84

  102 simple_exp: simple_exp OR • and_exp
  104           | simple_exp OR • error

    error        shift, and go to state 128
    ID           shift, and go to state 38
    NUMBERCONST  shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    TRUE         shift, and go to state 42
    FALSE        shift, and go to state 43
    NOT          shift, and go to state 44
    MINUS        shift, and go to state 45
    TIMES        shift, and go to state 46
    TERNARY      shift, and go to state 47
    LPAREN       shift, and go to state 48
